# mana-script

./: CMakeCache.txt  CMakeLists.txt  README.md  ast.cpp  ast.hpp  build.bat  codegen.cpp  error.cpp  error.hpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  symbol_table.cpp  symbol_table.hpp  token.cpp
src/: CMakeLists.txt  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
